# knowledge-hub

./: README.md  pyproject.toml
app/: main.py
app/api/: api.py
app/model/: models.py
app/service/: llm_service.py
